--- a/web_dev.html
+++ b/web_dev.html
@@ -27,33 +27,31 @@
         </div>
         <div class="middle">
             <ul>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://whimsical.com/devsoc-basic-webdev-roadmap-8hQe8dmmFzm5PAdEVFKY2t" target="_blank">Road Map</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Guide</a></li>
+                <li class="road"><img src="images/web/whimsical.png"><a href="https://whimsical.com/devsoc-basic-webdev-roadmap-8hQe8dmmFzm5PAdEVFKY2t" target="_blank">Road Map</a></li>
+                <li class="road"><img src="images/web/github.png"><a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Guide</a></li>
                 
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLfqMhTWNBTe3H6c9OGXb5_6wcc1Mca52n" target="_blank">Apna College</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" target="_blank">Code With Harry</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PL-Jc9J83PIiEeD3I4VXETPDmzJ3Z1rWb4" target="_blank">Pepcoding</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PL9ooVrP1hQOEloRCBI97ZXkWUg6MJn0Yf" target="_blank">Edureka</a></li>
+                <li class="youtube"><img src="images/web/apna.jpg"><a href="https://youtube.com/playlist?list=PLfqMhTWNBTe3H6c9OGXb5_6wcc1Mca52n" target="_blank">Apna College</a></li>
+                <li class="youtube"><img src="images/web/harry.jpg"><a href="https://youtube.com/playlist?list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" target="_blank">Code With Harry</a></li>
+                <li class="youtube"><img src="images/web/pepcoding.jpg"><a href="https://youtube.com/playlist?list=PL-Jc9J83PIiEeD3I4VXETPDmzJ3Z1rWb4" target="_blank">Pepcoding</a></li>
+                <li class="youtube"><img src="images/web/edureka.jpg"><a href="https://youtube.com/playlist?list=PL9ooVrP1hQOEloRCBI97ZXkWUg6MJn0Yf" target="_blank">Edureka</a></li>
 
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank">Angela Yu</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/python-and-django-full-stack-web-developer-bootcamp/" target="_blank">Jose Portilla</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://practice.geeksforgeeks.org/courses/dsa-self-paced" target="_blank">GFG Self paced</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://cs50.harvard.edu/college/2021/fall/" target="_blank">Harvard CS50</a></li>
+                <li class="paid"><img src="images/web/angela.jpg"><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank">Angela Yu</a></li>
+                <li class="paid"><img src="images/web/jose.jpg"><a href="https://www.udemy.com/course/python-and-django-full-stack-web-developer-bootcamp/" target="_blank">Jose Portilla</a></li>
                 
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3School</a></li>                
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank">MDN</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/html-tutorial" target="_blank">JavatPoint</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.tutorialspoint.com/html5/index.htm" target="_blank">TutorialsPoint</a></li>
+                <li class="documentation"><img src="images/web/w3.jpg"><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3School</a></li>                
+                <li class="documentation"><img src="images/web/mdn.png"><a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank">MDN</a></li>
+                <li class="documentation"><img src="images/web/javat.png"><a href="https://www.javatpoint.com/html-tutorial" target="_blank">JavatPoint</a></li>
+                <li class="documentation"><img src="images/web/tutorial.jpg"><a href="https://www.tutorialspoint.com/html5/index.htm" target="_blank">TutorialsPoint</a></li>
 
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.youtube.com/channel/UCVyRiMvfUNMA1UPlDPzG5Ow" target="_blank">JS Animation</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.youtube.com/kepowob" target="_blank">Pure CSS</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://codepen.io/trending" target="_blank">Code Pen</a></li>
+                <li class="practice"><img src="images/web/js.jpg"><a href="https://www.youtube.com/channel/UCVyRiMvfUNMA1UPlDPzG5Ow" target="_blank">JS Animation</a></li>
+                <li class="practice"><img src="images/web/css.jpg"><a href="https://www.youtube.com/kepowob" target="_blank">Pure CSS</a></li>
+                <li class="practice"><img src="images/web/codepen.png"><a href="https://codepen.io/trending" target="_blank">Code Pen</a></li>
             </ul>
         </div>
         <div class="right">
             <h1>Web Development</h1>
             <div class="qoute">
-                <img src="https://avatars.githubusercontent.com/u/8798027?v=4" alt="IMAGE">
+                <img src="images/web/angela.jpg" alt="IMAGE">
                 <h4>
                     Expert Advice:<br><br>
                     "A user interface is like a joke. If you have to explain it, it’s not that
