--- a/resources.html
+++ b/resources.html
@@ -5,45 +5,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/resources.css" />
     <title>Resources</title>
 </head>
 
 <body>
-    <div id="foo" class="ball"></div>
     <div class="hot-topics">
         <div class="right_sticky">
             <div class="sticky_1">
-                <a href="dsa.html">Data Structure and Algorithms</a>
+                <img src="images/hot_topic.png" class="card-image">
+                <a href="dsa.html">DSA</a>
             </div>
-            <div class="light dsa"><a href="dsa.html"></a></div>
             <div class="sticky_2">
-                <a href="web_dev.html">Web Development</a>
+                <img src="images/hot_topic2.jpg" class="card-image">
+                <a href="web_dev.html">Web Dev</a>
             </div>
-            <div class="light web"><a href="dsa.html"></a></div>
             <div class="sticky_3">
-                <a href="app_development.html">App Development</a>
+                <img src="images/hot_topic3.jpg" class="card-image">
+                <a href="app_development.html">App Dev</a>
             </div>
-            <div class="light app"><a href="dsa.html"></a></div>
+            <div class="entertainment_link">
+                <a href="entertainment.html"><p>Entertainment</p></a>
+            </div>
         </div>
         <div class="left_sticky">
             <div class="sticky_4">
+                <img src="images/hot_topic5.jpg" class="card-image">
                 <a href="artificial_learning.html">AI and ML</a>
             </div>
-            <div class="light ai"><a href="dsa.html"></a></div>
             <div class="sticky_5">
+                <img src="images/hot_topic6.png" class="card-image">
                 <a href="Video_editing.html">Video Editing</a>
             </div>
-            <div class="light ml"><a href="dsa.html"></a></div>
             <div class="sticky_6">
-                <a href="vector_learning.html">Vector Art</a>
+                <img src="images/hot_topic7.jpg" class="card-image">
+                <a href="Graphic_designing.html">Vector Art</a>
             </div>
-            <div class="light vector"><a href="dsa.html"></a></div>
+            <div class="entertainment_link">
+                <a href="index.html"><p>Ezzpool</p></a>
+            </div>
         </div>
     </div>
     <div class="extra">
         <div class="flip-box-inner">
             <div class="flip-box-front">
+                <img src="images/hot_topic8.png" class="extra-image">
                 <h3>EXTRA TOPICS</h3>
             </div>
             <div class="flip-box-back">
@@ -52,12 +61,10 @@
                     <li><a href="#">Graphic-Designing</a></li>
                     <li><a href="#">Crypto-currency</a></li>
                     <li><a href="#">Marketing</a></li>
+                    <li><a href="#">Dev-Ops</a></li>
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="entertainment_link">
-        <a href="entertainment.html"><p>Entertainment</p></a>
     </div>
     <script src="javascript/resources.js"></script>
 </body>
