--- a/dsa.html
+++ b/dsa.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="css/topic.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Dosis:wght@200;600&family=Raleway:wght@100;500&family=Roboto+Condensed:wght@300;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600&display=swap" rel="stylesheet">
     <title>DSA</title>
 </head>
 
@@ -27,29 +25,29 @@
         </div>
         <div class="middle">
             <ul>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.studytonight.com/data-structures/" target="_blank">Topics</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://whimsical.com/roadmap-for-everyone-EBVkC7PcS82xGrZcBwUU1k" target="_blank">Road Map</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://github.com/heyimvikash/DSA-EndGame" target="_blank">Guide</a></li>
+                <li class="road"><img src="images/dsa/studytonight.png"><a href="https://www.studytonight.com/data-structures/" target="_blank">Topics</a></li>
+                <li class="road"><img src="images/dsa/whimsical.png"><a href="https://whimsical.com/roadmap-for-everyone-EBVkC7PcS82xGrZcBwUU1k" target="_blank">Road Map</a></li>
+                <li class="road"><img src="images/dsa/github.png"><a href="https://github.com/heyimvikash/DSA-EndGame" target="_blank">Guide</a></li>
                 
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ" target="_blank">Apna College</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PL4PCksYQGLJM2mKe1n8LnFgcm3FRLhxZ9" target="_blank">Love Babbar</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLUcsbZa0qzu3yNzzAxgvSgRobdUUJvz7p" target="_blank">Anuj Bhaiya</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLgUwDviBIf0rPG3Ictpu74YWBQ1CaBkm2" target="_blank">Striver</a></li>
+                <li class="youtube"><img src="images/dsa/apna.jpg"><a href="https://youtube.com/playlist?list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ" target="_blank">Apna College</a></li>
+                <li class="youtube"><img src="images/dsa/babbar.jpg"><a href="https://youtube.com/playlist?list=PL4PCksYQGLJM2mKe1n8LnFgcm3FRLhxZ9" target="_blank">Love Babbar</a></li>
+                <li class="youtube"><img src="images/dsa/anuj.jpg"><a href="https://youtube.com/playlist?list=PLUcsbZa0qzu3yNzzAxgvSgRobdUUJvz7p" target="_blank">Anuj Bhaiya</a></li>
+                <li class="youtube"><img src="images/dsa/striver.jpg"><a href="https://youtube.com/playlist?list=PLgUwDviBIf0rPG3Ictpu74YWBQ1CaBkm2" target="_blank">Striver</a></li>
 
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/datastructurescncpp/" target="_blank">Abdul Bari</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.codingninjas.com/courses/c-plus-plus-data-structures-and-algorithms" target="_blank">Coding Ninjas</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://practice.geeksforgeeks.org/courses/dsa-self-paced" target="_blank">GFG Self paced</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://cs50.harvard.edu/college/2021/fall/" target="_blank">Harvard CS50</a></li>
+                <li class="paid"><img src="images/dsa/abdul.jpeg"><a href="https://www.udemy.com/course/datastructurescncpp/" target="_blank">Abdul Bari</a></li>
+                <li class="paid"><img src="images/dsa/ninja.jpg"><a href="https://www.codingninjas.com/courses/c-plus-plus-data-structures-and-algorithms" target="_blank">Coding Ninjas</a></li>
+                <li class="paid"><img src="images/dsa/gfg.png"><a href="https://practice.geeksforgeeks.org/courses/dsa-self-paced" target="_blank">GFG Self paced</a></li>
+                <li class="paid"><img src="images/dsa/harvard.jpg"><a href="https://cs50.harvard.edu/college/2021/fall/" target="_blank">Harvard CS50</a></li>
                 
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.w3schools.com/cpp/default.asp" target="_blank">W3School</a></li>                
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/cpp-tutorial" target="_blank">JavatPoint</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.geeksforgeeks.org/data-structures/?ref=shm" target="_blank">GeeksForGeeks</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.tutorialspoint.com/cplusplus/index.htm" target="_blank">TutorialsPoint</a></li>
+                <li class="documentation"><img src="images/dsa/w3.jpg"><a href="https://www.w3schools.com/cpp/default.asp" target="_blank">W3School</a></li>                
+                <li class="documentation"><img src="images/dsa/javat.png"><a href="https://www.javatpoint.com/cpp-tutorial" target="_blank">JavatPoint</a></li>
+                <li class="documentation"><img src="images/dsa/gfg.png"><a href="https://www.geeksforgeeks.org/data-structures/?ref=shm" target="_blank">GeeksForGeeks</a></li>
+                <li class="documentation"><img src="images/dsa/tutorial.jpg"><a href="https://www.tutorialspoint.com/cplusplus/index.htm" target="_blank">TutorialsPoint</a></li>
 
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.codechef.com/" target="_blank">CodeChef</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.hackerrank.com/" target="_blank">Hackerrank</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://leetcode.com/" target="_blank">Leetcode</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://codeforces.com/" target="_blank">CodeForces</a></li>
+                <li class="practice"><img src="images/dsa/codechef.jpg"><a href="https://www.codechef.com/" target="_blank">CodeChef</a></li>
+                <li class="practice"><img src="images/dsa/HackerRank.png"><a href="https://www.hackerrank.com/" target="_blank">Hackerrank</a></li>
+                <li class="practice"><img src="images/dsa/leetcode.png"><a href="https://leetcode.com/" target="_blank">Leetcode</a></li>
+                <li class="practice"><img src="images/dsa/codeforces.png"><a href="https://codeforces.com/" target="_blank">CodeForces</a></li>
             </ul>
         </div>
         <div class="right">
